<resources>
    <string name="app_name">CarDealer</string>
    <string name="dealer_list">Dealer List</string>
    <string name="dealer_name">Dealer Name</string>
    <string name="title_dealers">Dealers</string>
    <string name="button_export">Export</string>
    <string name="button_import">Import</string>
    <string name="button_acquisition">Acquisition</string>
    <string name="button_edit_dealer">Edit Dealer</string>
    <string name="button_add_car">Add Car</string>
    <string name="button_transfer">Transfer</string>
    <string name="button_loaned">Loaned</string>
    <string name="button_edit_car">Edit Car</string>
    <string name="button_export_all">Export All</string>
    <string name="button_delete_car">Delete Car</string>
    <string name="edit">Edit</string>
    <string name="acquisition">Acquisition</string>
    <string name="save">Save</string>
    <string name="edit_name">Edit Name</string>
    <string name="acquire">Acquire</string>
    <string name="dealer_name_hint">Dealer Name</string>
    <string name="title">Add Car</string>
    <string name="title2">Transfer Car</string>
</resources>